Table sellers {
  seller_id bigint [pk, increment]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  phone_number varchar(16) [not null, unique]
  password varchar(255) [not null]
  role varchar(16) [not null, note: 'SELLER or ADMIN']
  is_enabled boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
}

Table posts {
  post_id bigint [pk, increment]
  title varchar(100) [not null]
  price numeric(8,2) [not null]
  description varchar(1000) [not null]
  category varchar(32) [not null, note: 'ELECTRONICS, BOOKS, CLOTHING, FURNITURE, SPORTS, FOOD, SERVICES, OTHER']
  is_sold boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp
  status varchar(16) [not null, default: 'ACTIVE', note: 'ACTIVE or ARCHIVED']
  reminder_sent_at timestamp
  sold_at timestamp
  seller_id bigint [not null]
  buyer_id bigint

  Indexes {
    seller_id
    buyer_id
    (created_at) [name: 'idx_posts_public_listing']
    (category, created_at) [name: 'idx_posts_public_category']
    (expires_at) [name: 'idx_posts_expiration_window']
  }
}

Table post_media {
  id bigint [pk, increment]
  post_id bigint [not null]
  media_url text [not null]
  image_hash varchar(128)
  display_order integer [not null, default: 0]
  is_cover boolean [not null, default: false]

  Indexes {
    (post_id, display_order) [unique]
  }
}

Table favourites {
  id bigint [pk, increment]
  seller_id bigint [not null]
  post_id bigint [not null]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (seller_id, post_id) [unique]
    seller_id
    post_id
  }
}

Table reviews {
  review_id bigint [pk, increment]
  post_id bigint [not null]
  reviewer_id bigint [not null]
  reviewee_id bigint [not null]
  direction varchar(32) [not null, note: 'BUYER_TO_SELLER or SELLER_TO_BUYER']
  rating integer [not null]
  comment varchar(500)
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (post_id, direction) [unique]
    (reviewee_id, direction, created_at) [name: 'idx_reviews_reviewee_direction_created_at']
  }
}

Table password_reset_tokens {
  id bigint [pk, increment]
  token varchar(255) [not null, unique]
  seller_id bigint [not null]
  expires_at timestamp [not null]
  used boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (seller_id, used, expires_at) [name: 'idx_password_reset_tokens_seller_used_expires']
  }
}

Table email_verification_tokens {
  id bigint [pk, increment]
  code char(6) [not null]
  seller_id bigint [not null]
  expires_at timestamp [not null]
  used boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  Indexes {
    (seller_id, used, expires_at) [name: 'idx_email_verification_tokens_seller_used_expires']
  }
}

Table whatsapp_login_sessions {
  id uuid [pk]
  session_id uuid [not null, unique]
  login_token uuid [not null, unique]
  claim_token uuid [unique]
  status varchar(32) [not null, note: 'PENDING, COMPLETED, PHONE_NOT_LINKED, EXPIRED, CLAIMED']
  seller_id bigint
  phone_number varchar(16)
  creator_ip varchar(64) [not null]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [not null]
  completed_at timestamp
  claimed_at timestamp

  Indexes {
    (status, expires_at) [name: 'idx_whatsapp_login_sessions_status_expires']
    seller_id
  }
}

Ref: posts.seller_id > sellers.seller_id
Ref: posts.buyer_id > sellers.seller_id
Ref: post_media.post_id > posts.post_id
Ref: favourites.seller_id > sellers.seller_id
Ref: favourites.post_id > posts.post_id
Ref: reviews.post_id > posts.post_id
Ref: reviews.reviewer_id > sellers.seller_id
Ref: reviews.reviewee_id > sellers.seller_id
Ref: password_reset_tokens.seller_id > sellers.seller_id
Ref: email_verification_tokens.seller_id > sellers.seller_id
Ref: whatsapp_login_sessions.seller_id > sellers.seller_id
